# mini-autonomous-solar-team

./: .gitmodules  README.md
FollowLine/: followLine.py  kurt.ttt  python_avoid_obstacle.py
roboRio/: readMe.txt
roboRio/Chatter/: add_from_rio.vi  add_to_rio.vi  chatter.lvlps  chatter.lvproj  master.vi  parse_from_rio.vi  parse_to_rio.vi  publisher.vi  subscriber.vi  terminal.vi
src/rangefinder/: CMakeLists.txt  package.xml
src/rangefinder/src/: reader.cpp  sensor.cpp
